# schoolapp-api

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  pyvenv.cfg
docs/: README.md  client.md  internal.md  managers.md  parsers.md  types.md
schoolapp_api/: __init__.py  auth.py  constants.py  http_client.py  school_app_client.py
schoolapp_api/managers/: __init__.py  attendance_manager.py  base_manager.py  course_manager.py  grades_manager.py  profile_manager.py
schoolapp_api/parsers/: __init__.py  absences.py  annees.py  filieres.py  modules.py  note_elem.py  note_mod.py  profile.py  sanctions.py  semestres.py  stats.py
schoolapp_api/types/: __init__.py  annee.py  base.py  element.py  module.py  semestre.py
