[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolapp-api"
version = "2.1.5"
description = "Professional client for interacting with the School App API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Aferiad Kamal"}
]
dependencies = [
    "beautifulsoup4>=4.9.0",
]

[tool.setuptools]
packages = ["schoolapp_api", "schoolapp_api.managers", "schoolapp_api.parsers", "schoolapp_api.types"]
